--- a/telebarwdg/telebarwdg.csproj
+++ b/telebarwdg/telebarwdg.csproj
@@ -47,17 +47,25 @@
     <Reference Include="System.Data" />
     <Reference Include="System.Net.Http" />
     <Reference Include="System.Xml" />
+    <Reference Include="WindowsBase" />
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Client.cs" />
     <Compile Include="ControlProvider.cs" />
-    <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="LoginManager.cs">
+    <Compile Include="IView.cs" />
+    <Compile Include="MainPanel\CodeConfirmPage.cs">
       <SubType>UserControl</SubType>
     </Compile>
-    <Compile Include="LoginManager.Designer.cs">
-      <DependentUpon>LoginManager.cs</DependentUpon>
+    <Compile Include="MainPanel\CodeConfirmPage.Designer.cs">
+      <DependentUpon>CodeConfirmPage.cs</DependentUpon>
     </Compile>
+    <Compile Include="MainPanel\LoginPage.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="MainPanel\LoginPage.Designer.cs">
+      <DependentUpon>LoginPage.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Properties\Resources.Designer.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
@@ -69,10 +77,10 @@
     <Compile Include="TelegramTaskbarWidget.Designer.cs">
       <DependentUpon>TelegramTaskbarWidget.cs</DependentUpon>
     </Compile>
-    <Compile Include="TelegramWindow.cs">
+    <Compile Include="MainPanel\TelegramWindow.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="TelegramWindow.Designer.cs">
+    <Compile Include="MainPanel\TelegramWindow.Designer.cs">
       <DependentUpon>TelegramWindow.cs</DependentUpon>
     </Compile>
   </ItemGroup>
@@ -85,8 +93,11 @@
     </PackageReference>
   </ItemGroup>
   <ItemGroup>
-    <EmbeddedResource Include="LoginManager.resx">
-      <DependentUpon>LoginManager.cs</DependentUpon>
+    <EmbeddedResource Include="MainPanel\CodeConfirmPage.resx">
+      <DependentUpon>CodeConfirmPage.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="MainPanel\LoginPage.resx">
+      <DependentUpon>LoginPage.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
@@ -96,7 +107,7 @@
     <EmbeddedResource Include="TelegramTaskbarWidget.resx">
       <DependentUpon>TelegramTaskbarWidget.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="TelegramWindow.resx">
+    <EmbeddedResource Include="MainPanel\TelegramWindow.resx">
       <DependentUpon>TelegramWindow.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
