--- a/telebarwdg/telebarwdg.csproj
+++ b/telebarwdg/telebarwdg.csproj
@@ -37,6 +37,8 @@
     <AssemblyOriginatorKeyFile>telebarwdg.pfx</AssemblyOriginatorKeyFile>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="PresentationCore" />
+    <Reference Include="PresentationFramework" />
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Drawing" />
@@ -48,23 +50,10 @@
     <Reference Include="System.Net.Http" />
     <Reference Include="System.Xml" />
     <Reference Include="WindowsBase" />
+    <Reference Include="WindowsFormsIntegration" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Client.cs" />
     <Compile Include="ControlProvider.cs" />
-    <Compile Include="IView.cs" />
-    <Compile Include="MainPanel\CodeConfirmPage.cs">
-      <SubType>UserControl</SubType>
-    </Compile>
-    <Compile Include="MainPanel\CodeConfirmPage.Designer.cs">
-      <DependentUpon>CodeConfirmPage.cs</DependentUpon>
-    </Compile>
-    <Compile Include="MainPanel\LoginPage.cs">
-      <SubType>UserControl</SubType>
-    </Compile>
-    <Compile Include="MainPanel\LoginPage.Designer.cs">
-      <DependentUpon>LoginPage.cs</DependentUpon>
-    </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Properties\Resources.Designer.cs">
       <AutoGen>True</AutoGen>
@@ -77,12 +66,6 @@
     <Compile Include="TelegramTaskbarWidget.Designer.cs">
       <DependentUpon>TelegramTaskbarWidget.cs</DependentUpon>
     </Compile>
-    <Compile Include="MainPanel\TelegramWindow.cs">
-      <SubType>Form</SubType>
-    </Compile>
-    <Compile Include="MainPanel\TelegramWindow.Designer.cs">
-      <DependentUpon>TelegramWindow.cs</DependentUpon>
-    </Compile>
     <Compile Include="TaskbarButton.cs">
       <SubType>UserControl</SubType>
     </Compile>
@@ -94,30 +77,15 @@
     <PackageReference Include="SharpShell">
       <Version>2.7.2</Version>
     </PackageReference>
-    <PackageReference Include="TLSharp">
-      <Version>0.1.0.574</Version>
-    </PackageReference>
   </ItemGroup>
   <ItemGroup>
-    <EmbeddedResource Include="MainPanel\CodeConfirmPage.resx">
-      <DependentUpon>CodeConfirmPage.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="MainPanel\LoginPage.resx">
-      <DependentUpon>LoginPage.cs</DependentUpon>
-    </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
       <SubType>Designer</SubType>
     </EmbeddedResource>
-    <EmbeddedResource Include="TaskbarButton.resx">
-      <DependentUpon>TaskbarButton.cs</DependentUpon>
-    </EmbeddedResource>
     <EmbeddedResource Include="TelegramTaskbarWidget.resx">
       <DependentUpon>TelegramTaskbarWidget.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="MainPanel\TelegramWindow.resx">
-      <DependentUpon>TelegramWindow.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <ItemGroup>
@@ -125,6 +93,12 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="Resources\icon.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\telegramwpf\telegramwpf.csproj">
+      <Project>{c7e05992-6797-41ca-83f1-fa504556f01a}</Project>
+      <Name>telegramwpf</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <PropertyGroup>
