--- a/telegramwpf/telegramwpf.csproj
+++ b/telegramwpf/telegramwpf.csproj
@@ -7,7 +7,7 @@
     <ProjectGuid>{C7E05992-6797-41CA-83F1-FA504556F01A}</ProjectGuid>
     <OutputType>library</OutputType>
     <RootNamespace>TeleBarWdg</RootNamespace>
-    <AssemblyName>testwpf</AssemblyName>
+    <AssemblyName>telegramwpf</AssemblyName>
     <TargetFrameworkVersion>v4.8</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <ProjectTypeGuids>{60dc8134-eba5-43b8-bcc9-bb4bc16c2548};{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}</ProjectTypeGuids>
@@ -59,9 +59,11 @@
     <Compile Include="CircularProgressBar.xaml.cs">
       <DependentUpon>CircularProgressBar.xaml</DependentUpon>
     </Compile>
+    <Compile Include="Client.cs" />
     <Compile Include="CodeConfirmationPage.xaml.cs">
       <DependentUpon>CodeConfirmationPage.xaml</DependentUpon>
     </Compile>
+    <Compile Include="IMainWindowProvider.cs" />
     <Compile Include="SessionPage.xaml.cs">
       <DependentUpon>SessionPage.xaml</DependentUpon>
     </Compile>
@@ -120,12 +122,6 @@
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
     </None>
-  </ItemGroup>
-  <ItemGroup>
-    <ProjectReference Include="..\telebarwdg\telebarwdg.csproj">
-      <Project>{3d178628-4317-454a-8e82-fed9a764efa1}</Project>
-      <Name>telebarwdg</Name>
-    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
